# raidoc

./: .gitignore  LICENSE-FDL.txt  README.md  download-font-awesome.sh  pyproject.toml
.github/workflows/: deploy.yml
doc/: index.md
doc/asciinema/: asciinema-demo.cast  collaboration-smiley-new-component.cast  collaboration-smiley.cast  raimad-cli-export.cast  raimad-cli-export.enhance.cast
doc/dep/: asciinema-player.css.sha256  asciinema-player.css.url  asciinema-player.min.js.sha256  asciinema-player.min.js.url  fontawesome.zip.sha256  fontawesome.zip.url
doc/js/: main.js  search.js
doc/pages/: basics.md  beta.md  builtin-compos.md  cif-export-deepdive.md  collaboration.md  contributor-guide.md  coords-transforms.md  custom-geometry.md  dictlist.md  github-pages.md  helpers.md  index.md  install.jp.md  install.md  jupyter.md  layers.md  marks.md  packaging.md  people.md  proxies.md  raidex-tifuun-private.md  raidex-tifuun-public.md  raimark.md  subcompo-introspection.md  subcompos.md  tifuun.md  tutorial.md  vialess-msl.md
doc/scss/: root.scss
doc/templ/: class-reference.html  function-reference.html  map.html  root.html  search.html  toc.html  util.html
podman/: Dockerfile  build-image.sh  build-raidoc-in-container.sh  run-container.dev-raimad.sh  run-container.sh
src/raidoc/: __main__.py  autogen.py  build.py  builder.py  cli.py  getdeps.py  raimark_ext.py
