[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raidoc"
version = "1.2.0.16"
description = "Documentation for RAIMAD"
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
license = { file = "LICENSE-GPL.txt" }
# idk how to specify multiple licenses, someone please fix.
#license-files = [
#    { file = "LICENSE-GPL3.txt", text = "GNU GPL v3" },
#    { file = "LICENSE-FDL.txt", text = "GNU FDL" },
#    { file = "LICENSE-CC0.txt", text = "CC0" }
#]

readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3"
dependencies = [
	'jinja2',
	'libsass',
	'marko[codehilite]',
	'python-frontmatter',
	'addict',
	'ansi2html',
	'reflink',
	'numpydoc',
	]

#[tool.setuptools.packages.find]
#include = [ "pycif", "pycif.*" ]

[tool.ruff.lint]
exclude = [
    ]
select = [
    "E",
    "F",
    "D",
    ]
ignore = [
    "D401",  # don't complain about "imperative mood"
    ]
[tool.ruff.lint.pydocstyle]
convention = "numpy"
